test/functions/generic/genericChannelInInit2.good
genericChannelInInit2.chpl:9: In initializer:
genericChannelInInit2.chpl:9: error: Cannot default-initialize a variable with generic type
genericChannelInInit2.chpl:9: note: 'C_chnl' has generic type 'channel'
